--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="controle">
             <div class="container">
                 <div class="esquerda">
-                    <img src="/assets/botoesx.png" alt="">
+                    <img src="botoesx.png" alt="">
                 </div>
                 <div class="tela">
                    <h1><span class="wave">ELoS</span></h1>
                 </div>
                 <div class="direita">
-                    <img src="/assets/botoes2x.png" alt="">
+                    <img src="botoes2x.png" alt="">
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="robo">
-            <img src="/assets/robo2.gif" alt="">
+            <img src="robo2.gif" alt="">
         </div>
         <div class="ajuda">
             <div class="titulo">
@@ -76,7 +76,7 @@
                 <div id="modal" class="modal">
                 <div class="modal-conteudo">
                     <span class="fechar">&times;</span>
-                    <video src="/assets/video.mp4" class="modal-video" controls autoplay></video>
+                    <video src="video.mp4" class="modal-video" controls autoplay></video>
                 </div>
                 </div>
 
@@ -86,7 +86,7 @@
          
     </main>
     
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
