--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="controle">
             <div class="container">
                 <div class="esquerda">
-                    <img src="/assets/botoesx.png" alt="">
+                    <img src="botoesx.png" alt="">
                 </div>
                 <div class="tela">
                    <h1><span class="wave">ELoS</span></h1>
                 </div>
                 <div class="direita">
-                    <img src="/assets/botoes2x.png" alt="">
+                    <img src="botoes2x.png" alt="">
                 </div>
             </div>
         </div>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div class="robo">
-            <img src="/assets/robo2.gif" alt="">
+            <img src="robo2.gif" alt="">
         </div>    
     </main>
 </body>
