--- a/index.html
+++ b/index.html
@@ -34,30 +34,61 @@
             </div>
             <div class="selecao">
                 <ul>
-                    <li class="nivel">
-                        <div class="botao">
-                            <button onclick="window.location.href='#'">1</button>
-                        </div>
-                        <h2>Sequência Simples</h2>
-                    </li>
-                    <li class="nivel">
-                        <div class="botao2">
-                            <button onclick="window.location.href='#'">2</button>
-                        </div>
-                        <h2>Condicionais Simples</h2>
-                    </li>
-                    <li class="nivel">
-                        <div class="botao">
-                            <button onclick="window.location.href='#'">3</button>
-                        </div>
-                        <h2>Condicionais Duplas</h2>
-                    </li>
-                    <li class="nivel">
-                        <div class="botao2">
-                            <button onclick="window.location.href='#'">4</button>
-                        </div>
-                        <h2>Repetições</h2>
-                    </li>
+                    <ul class="container_nivel">
+                        <li class="nivel">
+                            <div class="botao">
+                                <button onclick="window.location.href='#'">1</button>
+                            </div>
+                            <h2>Sequência Simples</h2>
+                        </li>
+                        <li class="video">
+                            <div class="botao_video">
+                                <button onclick="window.location.href='#'"><h2>Veja mais!</h2><ion-icon name="play"></ion-icon></button>
+                            </div>
+                        </li>
+                    </ul>
+                    <li class="line"></li>
+                    <ul class="container_nivel">
+                        <li class="nivel">
+                            <div class="botao2">
+                                <button onclick="window.location.href='#'">2</button>
+                            </div>
+                            <h2>Condicionais Simples</h2>
+                        </li>
+                        <li class="video">
+                            <div class="botao_video">
+                                <button onclick="window.location.href='#'"><h2>Em breve</h2><ion-icon name="play"></ion-icon></button>
+                            </div>
+                        </li>
+                    </ul>
+                    <li class="line"></li>
+                    <ul class="container_nivel">
+                        <li class="nivel">
+                            <div class="botao">
+                                <button onclick="window.location.href='#'">3</button>
+                            </div>
+                            <h2>Condicionais Duplas</h2>
+                        </li>
+                        <li class="video">
+                            <div class="botao_video">
+                                <button onclick="window.location.href='#'"><h2>Em breve</h2><ion-icon name="play"></ion-icon></button>
+                            </div>
+                        </li>
+                    </ul>
+                    <li class="line"></li>
+                    <ul class="container_nivel">
+                        <li class="nivel">
+                            <div class="botao2">
+                                <button onclick="window.location.href='#'">4</button>
+                            </div>
+                            <h2>Repetições</h2>
+                        </li>
+                        <li class="video">
+                            <div class="botao_video">
+                                <button onclick="window.location.href='#'"><h2>Em breve</h2><ion-icon name="play"></ion-icon></button>
+                            </div>
+                        </li>
+                    </ul>
                 </ul>
             </div>
         </div>
@@ -65,5 +96,8 @@
             <img src="robo2.gif" alt="">
         </div>    
     </main>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
